# Colour

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
examples/: println.rs  rectangle.rs
src/: internal.rs  lib.rs  unnamed.rs
tests/: mod.rs
