[package]
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
categories = ["command-line-interface"]
description = "Macros for creating coloured console output."
documentation = "https://docs.rs/colour"
edition = "2021"
keywords = ["color", "colour", "print", "terminal", "console"]
license = "MIT OR Apache-2.0"
name = "colour"
readme = "README.md"
repository = "https://github.com/Fraser999/Colour.git"
version = "1.1.0"

[dependencies]
crossterm = "0.27.0"
