[package]
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
categories = ["command-line-interface"]
description = "Macros for creating coloured console output."
documentation = "https://docs.rs/colour"
edition = "2021"
keywords = ["color", "colour", "print", "terminal", "console"]
license = "MIT OR Apache-2.0"
name = "colour"
readme = "README.md"
repository = "https://github.com/Fraser999/Colour.git"
rust-version = "1.70.0"
version = "2.1.0"

[[example]]
name = "println"
path = "examples/println.rs"

[[example]]
name = "rectangle"
path = "examples/rectangle.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "fileapi", "handleapi", "wincon", "winnt"] }
